feat: update scss

--- a/css/style.scss
+++ b/css/style.scss
@@ -462,8 +462,8 @@ body{
         cursor: pointer;
 
         &:hover{
-          background: $white;
-          color:$black;
+          background: $fuxia;
+          color:$light;
         }
       }
     }
@@ -495,7 +495,7 @@ body{
         img{
           height: 100%;
           width:100%;
-          object-fit: cover;
+          object-fit: contain;
           transition: .2s linear;
         }
       }
